# playlist-analyse-bot

./: .coveragerc  .gitignore  Dockerfile  Dockerfile.bot  README.md  conf.tst  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
bot/: README.md  __init__.py  main.py  utils.py
bot/handlers/: callback_handler.py  playlist_handler.py
src/: .gitignore  artists.csv  docker-compose.yml  load_artists.py  main.py  parse_concerts.py  update_ticketmaster.py  view_data.py
src/bot/: README.md  main.py  utils.py
src/bot/handlers/: callback_handler.py  playlist_handler.py
src/clients/: global_concert_client.py  local_concert_client.py  music_playlist_client.py
src/config/: settings.py
src/db/: database.py  models.py
src/parser/: Dockerfile  config.py  database.py  docker-compose.yml  scraper.py  view_data.py
src/repositories/: __init__.py  concert_repository.py
src/scripts/: load_artists.py  parse_concerts.py  update_ticketmaster.py  view_data.py
src/services/: concert_service.py  music_playlist_client.py  playlist_service.py  recommendation_service.py
src/tests/: conftest.py  test_bot_utils.py  test_callback_handler.py  test_concert_repository.py  test_concert_service.py  test_concert_utils.py  test_database.py  test_global_client.py  test_global_concert_client.py  test_handlers.py  test_music_client.py  test_music_playlist_client.py  test_playlist_handler.py  test_playlist_service.py  test_recommendation.py  test_recommendation_service.py  test_repo.py  test_url.py  test_url_parser.py  test_utils.py
src/utils/: concert_utils.py  url_parser.py
(+4 files in other folders)
